--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Favorite Location Manager</title>
+</head>
+<body>
+	<!-- <form action="http://127.0.0.1:5000/create" method="post"> -->
+	<form id="location_form" method="post">
+  		Location name: <input type="text" name="name"><br>
+  		Address: <input type="text" name="address"><br>
+  		<!-- Latitude: <input type="text" name="lat"><br> -->
+  		<!-- Longitude: <input type="text" name="lng"><br> -->
+  		<!-- <input type="submit" /> -->
+	</form>
 
-	<head>
-		<title>Favorite Location Manager</title>
-		<link href="style.css" rel="stylesheet" />
-	</head>
-
-	<body>
- 	
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
-
-        <script src="script.js"></script>
-
+    <button id="add-location">Add Location</button>
+    <ul id="location-list">
+    </ul>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+    <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.4/underscore-min.js"></script>
+    <script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"></script>
+    <script src="script.js"></script>
+</body>
 </html>
