--- a/index.html
+++ b/index.html
@@ -1,24 +1,87 @@
 <!DOCTYPE html>
 <html>
-<head>
+ <head>
+    <meta charset="utf-8">
     <title>Favorite Location Manager</title>
-</head>
-<body>
-	<!-- <form action="http://127.0.0.1:5000/create" method="post"> -->
-	<form id="location_form" method="post">
-  		Location name: <input type="text" name="name"><br>
-  		Address: <input type="text" name="address"><br>
-  		<!-- Latitude: <input type="text" name="lat"><br> -->
-  		<!-- Longitude: <input type="text" name="lng"><br> -->
-  		<!-- <input type="submit" /> -->
-	</form>
-
-    <button id="add-location">Add Location</button>
-    <ul id="location-list">
-    </ul>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+ </head>
+   
+ <body>
+    <!-- <p>Hello Bootstrap!</p> -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.4/underscore-min.js"></script>
     <script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"></script>
-    <script src="script.js"></script>
-</body>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootbox.min.js"></script>
+    <script src="js/script.js"></script>
+
+    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  		<div class="modal-header">
+    		<button type="button" class="close" data-dismiss="modal" aria-hidden="true" onclick="closeModal()">&times;</button>
+    		<h3>Select Appropriate Address</h3>
+    		<p>Retrieved multiple search results. <br>
+    			Please choose the most accurate option or close and try again.</p>
+  		</div>
+  		<div class="modal-body" id="modal_address_options">
+  		</div>
+  		<div class="modal-footer">
+    		<a class="btn" onclick="closeModal()">Cancel</a>
+    		<a class="btn btn-primary" onclick="submitModal()">Submit</a>
+  		</div>
+	</div>
+
+    <div class="container">
+        <div class="row row-padded">
+            <div class="span12" id="alertbox_wrap">
+                <!-- <div class="alert alert-error">
+                    <p> Error: Could not find such address </p>
+                </div> -->
+            </div>
+        </div>
+    	<div class="hero-unit">
+        	<h1>Favorite Location Manager</h1>
+        	<!-- <p>Hello guys i am a ".hero-unit" and you can use me if you wanna say something important.</p>
+        	<p><a class="btn btn-primary btn-large">Super important &raquo;</a></p> -->
+        </div>
+        <!-- <div class="row">
+        	<div class="alert alert-success">
+  				<p> HLLO</p>
+			</div>
+        </div> -->
+
+    	<div class="row row-padded">
+    		<div class="span6">
+    			<h4>Add Location Panel</h4><br>
+  		  			<form class="form-inline" id="add_location_form">
+  						<input type="text" class="input-small" placeholder="Name" name="name">  
+  						<input type="text" class="input-large" placeholder="Address" name="address"> 
+  						<input type="button" class="btn" id="add-location" value="Add"></input>
+					</form>
+    		</div>
+    		<div class="span6" id="address_load_panel"></div> 
+    	</div> <!-- .row -->
+    	
+		<div class="row row-padded">
+    		<div class="span6">
+    			<h4>Map Viewer Panel</h4>
+    			<img src="img/placeholder.jpg"/>
+    		</div> <!-- .span12 -->
+    	
+    		<div class="span6">
+    			<h4>Location List Panel</h4>
+    			<table class="table table-striped table-bordered">
+    				<thead>
+    					<tr>
+    						<th>Name</th>
+    						<th>Address</th>
+    						<th>More Options</th>
+    						<th>Remove</th>
+    					</tr>
+    				<tbody id="loc_display_table">
+    				</tbody>
+    			</table> <!-- .table table-striped -->
+    		</div> <!-- .span10 -->
+    	</div> <!-- .row -->
+    </div> <!-- .container -->
+ </body>
 </html>
