--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootbox.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/asyncCalls.js"></script>
 
     <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   		<div class="modal-header">
